Revision history for App-Anchr

{{$NEXT}}
    - Treat 2GS contigs as long reads
        - --mergemax and --fillmax
    - `anchr layout`
        - Move <strand.fasta> as 1st argment
        - add anchors missed in `$anchor_graph`, i.e., not correctly linked to long.fasta

0.5.8 2018-01-31T20:13:58Z
    - Adopt bbtools pipeline in `anchr trim`
        - Move duplicated parts from `anchr mergereads` to `anchr trim`
        - Move templates from 2_trim.tt2 to template.pm
        - Store BBTOOLS_RESOURCES in share/
        - No longer use tally (part from reaper)
        - Add `-f` to `rm`
        - Remove .sickle and .clean suffixes
        - Separate some stats of statReads into statTrimReads
    - Execute trim.sh in 2_illumina/trim/
        - Use 2_illumina/trim as inputs for spades, platanus, and megahit
    - Treat 2_illumina/trim as 2_illumina/Q0L0
        - Accept Q0L0 in kunitigs and anchors
    - Use `awk` and `shuf` to shuffle interleaved fasta reads
    - MRMegahit and MRSpades
        - MRMegahit is all right
        - Don't use MRSpades
    - Add gen_bsub() to `anchr template`

0.5.7 2018-01-18T17:18:19Z
    - Rewrite 2_insertSize.sh
        - Mapping against genome and tadpole contigs
        - Stats with reformat.sh and picard
    - `anchr mergereads`
        - Set dupesubs=0 to clumpify.sh, default value is 2
        - Separate U1, U2, Us.fq.gz from unmerged.fq.gz
        - Create pe.cor.fa.gz from mergereads
        - environment.json
    - Add table captions to statXXX.md
    - Rename 6_mergeXXX and 6_anchorXXX to 7_
    - Add 6_downSampling.sh
    - Limit MAX_SERIAL to 50
    - Add gen_6_kunitigs() to `anchr template`
    - Add gen_6_anchors() to `anchr template`
    - Add gen_statMRAnchors() to `anchr template`

0.5.6 2018-01-12T10:13:10Z
    - Don't use scythe anymore. Use bbduk.sh instead.
    - quorum
        - Don't filter reads
        - /1 and /2 for paired reads
        - pe.cor.fa.gz
        - shuffle.sh pe.cor.fa.gz