@@ -6,6 +6,7 @@ Revision history for App-Anchr
     - `anchr layout`
         - Move <strand.fasta> as 1st argment
         - add anchors missed in `$anchor_graph`, i.e., not correctly linked to long.fasta
+    - Add gen_sgaPreQC() to `anchr template`
 
 0.5.8 2018-01-31T20:13:58Z
     - Adopt bbtools pipeline in `anchr trim`
